# robotframework-robocop

./: .coveragerc  .gitignore  .mega-linter.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  .readthedocs.yml  .release-please-manifest.json  .sarif.json  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  VISUAL_CODEBASE.md  codecov.yml  mkdocs.yml  noxfile.py  pylama.ini  pyproject.toml  pytest.ini  release-please-config.json  setup.py  tox.ini
.benchmarks/Windows-CPython-3.9-64bit/: 0001_benchmark_results.json  0002_benchmark_results.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
.github/workflows/: docs-check.yml  e2e-tests.yml  linter.yml  megalinter.yml  pr-title.yml  pre-commit.yml  publish.yml  python-publish.yml  release-please.yml  release_check.yml  tests.yml  unit-tests.yml  upload-sarif.yml  visualize-repo.yml
docs/: CODE_OF_CONDUCT.md  api.rst  checkers.rst  ci.rst  cli_options.rst  community_rules.rst  conf.py  configuration.rst  disablers.rst  external_rules.rst  generate_rules_list.py  getting_started.rst  including_rules.rst  index.md  index.rst  load_checkers_docs.py  mcp.md  overview.rst  read_macros.py  reports.rst  requirements.txt  rule_basics.rst  rule_severity_thresholds.rst  rules.rst  rules_list.rst  rules_metadata.py  user_guide.rst
docs/configuration/: configuration_reference.md  disablers.md  index.md
docs/css/: extra.css
docs/formatter/: custom_formatters.md  formatter.md  skip_formatting.md
docs/integrations/: ai.md  github.md  gitlab.md  jenkins.md  megalinter.md  precommit.md  pycharm.md  sonarqube.md  vscode.md
docs/linter/: auto_fix.md  custom_rules.md  linter.md  rules.md
docs/releasenotes/: 2.6.0.rst  2.7.0.rst  2.8.0.rst  2.8.1.rst  2.9.0.rst  3.0.0.rst  3.1.0.rst  3.1.1.rst  3.2.0.rst  3.2.1.rst  3.3.0.rst  4.0.0.rst  4.0.1.rst  4.1.0.rst  4.1.1.rst  4.2.0.rst  4.2.1.rst  4.2.2.rst  5.0.0.rst  5.0.1.rst  5.0.2.rst  5.0.3.rst  5.0.4.rst  5.1.0.rst  5.2.0.rst  5.3.0.rst  5.4.0.rst  5.5.0.rst  5.6.0.rst  5.7.0.rst  5.8.0.rst  6.0.0.rst  6.0.0a1.rst  6.0.0a2.rst  6.0.0a3.rst  6.0.0dev1.rst  6.0.1.rst  6.0.2.rst  6.0.3.rst  6.0.4.rst  (+23 more)
docs/source/: conf.py  configuration.rst  disablers.rst  external_rules.rst  index.rst  integrations.rst  overview.rst  reports.rst  rule_basics.rst  rules_list.rst  rules_metadata.py
docs/static/: custom.css  theme.css
docs/user_guide/: intro.md  migrate_to_robocop6.md  python_api.md
docs_mk/: generate_rules_list.py
robocop/: __init__.py  config.py  default_config.toml  default_config.txt  exceptions.py  files.py  reports.py  rules.py  run.py
robocop/checkers/: __init__.py  comments.py  documentation.py  duplications.py  errors.py  lengths.py  misc.py  naming.py  spacing.py  tags.py
robocop/config/: __init__.py  config.py
robocop/messages/: __init__.py  messages.py
robocop/reports/: __init__.py  compare_runs_report.py  file_stats_report.py  json_report.py  reports.py  return_status_report.py  robocop_version_report.py  rules_by_id_report.py  rules_by_severity_report.py  sarif_report.py  time_taken_report.py  timestamp_report.py
robocop/rules/: __init__.py  rules.py
robocop/utils/: __init__.py  disablers.py  file_types.py  misc.py  run_keywords.py  utils.py  variable_matcher.py  version_matching.py
src/robocop/: __init__.py  __main__.py  cache.py  cli.py  config.py  config_manager.py  errors.py  exceptions.py  files.py  migrate_config.py  run.py  source_file.py  version_handling.py
tests/: __init__.py  conftest.py  duplicates.robot  empty_section.robot  empty_settings.robot  indents.robot  lines_spacing.robot  loops.robot  missing_whitespace.robot  nested_for_loops.robot  pylama_parse.py  reserved_words.robot  resource.robot  returns.robot  setting_section_naming.robot  test.robot  test.txt  test_cli.py  utils.py
tests/atest/: conftest.py  custom_tests.yaml  test_rule.py  test_rule_old.py
tests/benchmarks/: conftest.py  test_rules_benchmarks.py
tests/cache/: test_cache.py  test_cache_integration.py
tests/complexity/: resource.robot  resource2.robot  test.robot
tests/config/: test_config_manager.py  test_extend_config.py  test_formatter_config.py  test_hash.py  test_rule_matcher.py
tests/documentation/: conftest.py  test_toml_config.py
tests/e2e/: test_e2e.py
tests/formatter/: __init__.py  test_disablers.py  test_overwrite_modes.py  test_skip.py
tests/linter/: test_custom_rules.py  test_disablers.py  test_empty_selects.py  test_extend_per_file_ignores.py  test_fix.py  test_rule_matcher.py
tests/mcp/: __init__.py  conftest.py  test_cache.py  test_integration.py  test_middleware.py  test_natural_language_config.py  test_prompts.py  test_resources.py  test_server.py  test_tools.py
tests/migrate_config/: test_migrate_config.py
tests/perfomance/: big_file.template  test.py
tests/performance/: generate_reports.py  merge_reports.py
tests/rf_versions_matrix/: requirements_rf5.txt  requirements_rf7.txt
tests/test_data/: __init__.robot  arguments.robot  disabled_whole.robot  duplicates.robot  empty_section.robot  empty_settings.robot  encodings.robot  equal_sign.robot  indents.robot  invalid_file.robot  lines_spacing.robot  nested_for_loops.robot  reserved_words.robot  resource.robot  setting_section_naming.robot  tabs_and_spaces.robot  tag_scopes.robot  test.robot  test.txt  two_.disablers_blocks.robot
tests/utest/: conftest.py  test_api.py  test_argument_validation.py  test_assignment_type_detector.py  test_checker_invalid_conf.py  test_community_rule.py  test_configuration_file.py  test_configure_rule.py  test_default_config.py  test_default_rule.py  test_disablers.py  test_external_rules.py  test_including_excluding.py  test_listing_rules.py  test_messages.py  test_path_matching.py  test_reports.py  test_return_status.py  (+2 more)
utest/: test_argument_validation.py  test_checker_invalid_conf.py  test_disablers.py  test_external_rules.py  test_including_excluding.py  test_listing_rules.py  test_messages.py  test_thresholds.py
(+3100 files in other folders)
